cmake_minimum_required(VERSION 3.10)


set(LIB_MSYS C:/msys64/mingw64/lib)
set(INC_MSYS C:/msys64/mingw64/include/OpenBLAS)

set(LIB_UNIX /usr/local/opt/openblas/lib)
set(INC_UNIX /usr/local/opt/openblas/include)

if(COMPILER STREQUAL "Intel")
	add_compile_options("-Qmkl")
	set(CMAKE_C_COMPILER icl)
endif(COMPILER STREQUAL "Intel")

if(WIN32)
	if(MSVC)
		MESSAGE(STATUS "Compiling with MSVC on Win32")
		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/win_msvc)
		set(LIB_DIR ${LIB_MSYS})	
		set(INC_DIR ${INC_MSYS})	
	endif(MSVC)
	if(MSYS)
		MESSAGE(STATUS "Compiling with MSYS on Win32")
		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/win_msys)
		set(LIB_DIR ${LIB_MSYS})	
		set(INC_DIR ${INC_MSYS})	
	endif(MSYS)
endif(WIN32)

if(UNIX)
	if(MSYS)
		MESSAGE(STATUS "Compiling with MSYS on UNIX")
		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unix_msys)
		set(LIB_DIR ${LIB_MSYS})	
		set(INC_DIR ${INC_MSYS})	
	else()
		MESSAGE(STATUS "Compiling with GCC on UNIX")
		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unix_gcc)
		set(LIB_DIR ${LIB_UNIX})
		set(INC_DIR ${INC_UNIX})	
	endif(MSYS)
endif(UNIX)

add_executable(array)
target_sources(array PRIVATE array.c)
target_link_libraries(array PRIVATE openblas)

add_executable(test_blas)
target_sources(test_blas PRIVATE test_blas.c)
target_link_libraries(test_blas PRIVATE openblas)
